Fix solutions menu not totally visible on mobile while improving the menu styles and transition also on mobile

--- a/src/components/HeaderNavbar/Card/styles.module.less
+++ b/src/components/HeaderNavbar/Card/styles.module.less
@@ -38,15 +38,6 @@
     padding-bottom: 24px;
     background-color: var(--dark-blue);
 
-    @media (max-height: 880px) {
-        overflow: auto;
-        max-height: 85vh;
-    }
-
-    @media (max-height: 425px) {
-        max-height: 60vh;
-    }
-
     @media (max-width: @menuTransitionMaxWidthBreakpoint) {
         grid-template-columns: 1fr 1fr;
         padding: 0 20px;
