--- a/src/components/HeaderNavbar/styles.module.less
+++ b/src/components/HeaderNavbar/styles.module.less
@@ -18,6 +18,7 @@
     padding: 0 0 24px 0px;
     gap: 0;
     width: 100%;
+    height: fit-content;
   }
 }
 
